# advent-of-code

./: .gitignore  pyproject.toml
2021/day1/: day1  day1.go  go.mod
2021/day10/: day10.go  go.mod
2021/day11/: day11.go  go.mod
2021/day12/: day12.go  go.mod
2021/day13/: day13.go  go.mod
2021/day14/: day14.go  go.mod
2021/day15/: day15.go  go.mod
2021/day16/: day16.go  day16_test.go  go.mod
2021/day17/: day17.go  day17_test.go  go.mod
2021/day2/: day2.go  go.mod
2021/day20/: day20.go  go.mod
2021/day21/: day21.go  go.mod
2021/day25/: day25.go  go.mod
2021/day3/: day3.go  go.mod
2021/day4/: day4.go  day4_test.go  go.mod
2021/day5/: day5.go  go.mod  ventdiagram
2021/day6/: Initial state  day6.go  go.mod
2021/day7/: day7.go  go.mod
2021/day8/: day8.go  go.mod
2021/day9/: day9.go  go.mod
2023/day1/: day1.py
2023/day2/: day2.py
2023/day3/: day3.py
2023/day4/: day4.py
2023/day6/: day6.py
2023/day7/: day7.py
2023/day8/: day8.py
2023/day9/: day9.py
